--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,20 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="utf-8">
+  <title>JavaJam</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="Style.css">
+</head>
+<body>
+  <div class="Wiki">
+    <div class="date"> December 17 2021</div>
+  </div>
+  
+  
+  
+  <body>
+  </html>
+  
+  
 
