--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
   <div class="Wiki">
     <div class="date"> December 17 2021</div>
+    <h2> This is my First Wiki Page </h2>
+    <p class="paragraph">
+      Believe in yourself, take on your challenges, dig deep within yourself to conquer fears. Never let anyone bring you down. You got to keep going.
+      So many times, people told me I can't do this or can't do that. My nature is that I don't listen very well. I'm very determined, and I believe in myself. My parents brought me up that way. Thank God for that. I don't let anything stand in my way.
   </div>
   
   
